--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "prepare": "husky install",
+    "build": "tsc && tsc-alias",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore",
     "format": "prettier --check . --ignore-path .gitignore",
@@ -15,6 +16,7 @@
     "mobx-react": "^7.6.0",
     "next": "^13.4.7",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "serializr": "^3.0.2",
     "typescript": "5.1.3"
   },
@@ -32,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "tsc-alias": "^1.8.6"
   }
 }
