--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
+    "joi": "^17.9.2",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "next": "^13.4.7",
