--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "mobx-hydrate",
   "version": "0.1.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ev1ch/mobx-hydrate.git"
+  },
+  "author": {
+    "name": "Vlad Zusko",
+    "email": "vladzvu11@gmail.com"
+  },
+  "readme": "README.md",
   "scripts": {
     "prepare": "husky install",
     "build": "tsc && tsc-alias",
