--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "bugs": {
     "url": "https://github.com/github.com/Ev1ch/mobx-hydrate/issues"
   },
+  "files": [
+    "dist/**/*"
+  ],
   "homepage": "https://github.com/github.com/Ev1ch/mobx-hydrate",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
