--- a/package.json
+++ b/package.json
@@ -38,9 +38,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
     "joi": "^17.9.2",
+    "lodash": "^4.17.21",
     "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "next": "^13.4.7",
@@ -50,6 +49,9 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.13",
+    "@types/lodash": "^4.14.195",
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
     "@types/jest": "^29.5.2",
