--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "@types/lodash": "^4.14.195",
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.13",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "eslint": "^8.43.0",
@@ -69,6 +69,7 @@
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.6"
   }
 }
